# Hawl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Core.sharpmake.cs  Hawl.csproj  Hawl.sharpmake.cs  LICENSE  Lib.sharpmake.cs  README.md  Renderer.sharpmake.cs  platform.cmake  xmake.lua
Core/: CMakeLists.txt  Thread.cpp  WindowsLog.cpp  platform.cmake  xmake.lua
Core/Interface/: BaseType.h  HIID.h  IAppBase.h  RefCntPtr.h  Timer.h
Core/include/: coreafx.h
Core/include/Linux/: CriticalSection.h  RWLock.h
Core/interface/: BaseType.h  Common.h  Compiler.h  IAppBase.h  IThread.h  Logger.h  MathType.h  OS.h  RefCntPtr.h  Thread.h  Timer.h  Triats.h
Core/interface/Algorithm/: LockfreeQueue.h
Core/interface/GC/: Heap.h  ObjectHeader.h  Triats.h
Core/interface/SmartPtr/: RefCntPtr.h  ReferenceCounterBase.h  ReferenceCouterBase.h  SharedPtr.h
Core/interface/Thread/: RefCntThreadSafe.h
Core/interface/math/: Common.h
Core/src/: Logger.cc  Thread.cc
Core/src/Linux/: Linux.cc  Thread.cc  Timer.cc
Core/src/Windows/: Timer.cc
Renderer/: CMakeLists.txt  D3D12.cpp  D3D12Desc.h  D3D12Hooks.cpp  D3D12Hooks.h  DX12CommandQueue.cpp  DX12Device.cpp  DX12Device.h  DX12Handle.h  DX12Helper.h  DescriptorHeap.cpp  DescriptorHeap.h  GPUHelper.h  NVAPIHelper.h  Renderer.cpp  xmake.lua
Renderer/DX12/: CMakeLists.txt
Renderer/DX12/include/: DX12helper.h
Renderer/DX12/interface/: DX12Device.h  DX12Fence.h  Renderer.h
Renderer/DX12/src/: DX12Device.cc  Renderer.cc
Renderer/Windows/: CMakeLists.txt
Renderer/Windows/Interface/: WinApp.h
Renderer/Windows/interface/: WinApp.h
Renderer/Windows/src/: WinApp.cc
Renderer/include/: RenderDesc.h
Renderer/include/DX12/: DX12Handle.h
Renderer/include/Vulkan/: VulkanInstance.h
Renderer/interface/: DX12Device.h  DX12Fence.h  Device.h  GPUConfig.h  IRenderer.h  IShaderReflection.h  RenderInfo.h  Renderer.h  Renderer.inl  TextureFormat.h
Renderer/src/: DX12Device.cc  DX12Fence.cc  Renderer.cc  Renderer.inl
Renderer/src/DX12/: D3D12.cpp  DX12CommandQueue.cc  DX12CommandQueue.cpp  DX12Device.cc  DX12Device.cpp  DX12Handle.h  DX12Helper.h  DX12Resource.h  InitRenderer.cpp
Renderer/src/Vulkan/: VulkanDevice.cc  VulkanDevice.cpp  VulkanHelper.h  VulkanInstance.cpp  VulkanInstance.h
Test/: CMakeLists.txt  STLstatic.cc
Test/Core/: CMakeLists.txt  TimerTest.cc
Test/Core/Linux/: SharedCoreTest.cpp  ThreadTest.cc  TimerTest.cc
Test/Core/Windows/: AdapterInfo.cc  EnumExpanded.cpp  RefCntTest.cc  TimerTest.cc
Test/Core/tbb/: TbbTest.cc
Test/GC/: TestIsSubClass.cc
Test/ModuleTest/: hello.mpp  main.cpp  xmake.lua
Test/Renderer/: CMakeLists.txt  TestBase.cc
Test/tbb/: CMakeLists.txt  parallel_for.cpp
Window/: CMakeLists.txt
Window/include/: WindowImpl.hpp
Window/interface/: WinApp.h  Window.h  WindowHandlePlatform.h
Window/src/: Window.cpp
deploy/: Core.sharpmake.cs  Hawl.csproj  Hawl.sharpmake.cs  HawlProject.sharpmake.cs  Renderer.sharpmake.cs  ThirdParty.sharpmake.cs
